[gd_scene load_steps=2 format=3 uid="uid://va0w0g2kao51"]

[ext_resource type="Script" uid="uid://dco0pybjjiymu" path="res://TimerLogic.gd" id="1_3p6fi"]

[node name="TimerUI" type="Control"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
offset_bottom = -568.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3p6fi")

[node name="ProgressContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 143.0
offset_right = 1023.0
offset_bottom = 60.0

[node name="TimeLabel" type="Label" parent="ProgressContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "02:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeProgressBar" type="ProgressBar" parent="ProgressContainer"]
layout_mode = 2
max_value = 120.0
show_percentage = false

[node name="TimerNode" type="Timer" parent="."]
